# prog_laba3

./: CMakeLists.txt  CMakePresets.json  debug.sh  regen_cmake.sh  release.sh  run.sh  t.py  task.txt  test1.cpp  test2.cpp  text.py  tokens.py
include/: types.h
src/: main.c  text.c  tokens.c
